Implement resumable functions (#32)

--- a/src/vm/objects/CMakeLists.txt
+++ b/src/vm/objects/CMakeLists.txt
@@ -10,6 +10,8 @@ target_sources(tiro_objects
         buffer.hpp
         class.cpp
         class.hpp
+        coroutine_stack.cpp
+        coroutine_stack.hpp
         coroutine.cpp
         coroutine.hpp
         exception.cpp
@@ -22,6 +24,7 @@ target_sources(tiro_objects
         module.hpp
         native.cpp
         native.hpp
+        nullable.hpp
         primitives.cpp
         primitives.hpp
         public_types.cpp
