--- a/test/api_tests/CMakeLists.txt
+++ b/test/api_tests/CMakeLists.txt
@@ -4,11 +4,13 @@ add_executable(api_tests
     helpers.hpp
     matchers.hpp
 
+    tiro_functions_test.cpp
     tiro_objects_test.cpp
     tiro_vm_test.cpp
 
     tiropp_compiler_test.cpp
     tiropp_error_test.cpp
+    tiropp_functions_test.cpp
     tiropp_native_type_test.cpp
     tiropp_objects_test.cpp
     tiropp_vm_test.cpp
