--- a/test/eval_tests/CMakeLists.txt
+++ b/test/eval_tests/CMakeLists.txt
@@ -18,5 +18,6 @@ add_executable(eval_tests
     strings_test.cpp
     variables_test.cpp
 )
-target_link_libraries(eval_tests PRIVATE common_flags tiro::tiro fmt::fmt Catch2::Catch2)
+tiro_set_common_options(eval_tests)
+target_link_libraries(eval_tests PRIVATE tiro::tiro fmt::fmt Catch2::Catch2)
 target_include_directories(eval_tests PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
