--- a/test/unit_tests/CMakeLists.txt
+++ b/test/unit_tests/CMakeLists.txt
@@ -1,10 +1,8 @@
 add_executable(unit_tests
     main.cpp
 )
-
-target_link_libraries(unit_tests PRIVATE common_flags)
-target_link_libraries(unit_tests PRIVATE tiro_objects)
-target_link_libraries(unit_tests PRIVATE Catch2::Catch2)
+tiro_set_common_options(unit_tests)
+target_link_libraries(unit_tests PRIVATE tiro_objects Catch2::Catch2)
 target_include_directories(unit_tests PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_subdirectory(bytecode)
