Cleanup cmake options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,14 +17,13 @@ tiro_apply_version(0 1 0 "-dev")
 include(GNUInstallDirs)
 
 option(TIRO_DEV "Enable common development settings." OFF)
-option(TIRO_LTO "Enable link time optimization (if supported)." OFF)
-option(TIRO_COV "Code coverage analysis. Build mode should be Debug." OFF)
-option(TIRO_IWYU "Runs include-what-you-use when building the library" OFF)
-option(TIRO_SAN "Enable compiling with sanitizer flags (GCC only)." OFF)
 option(TIRO_TESTS "Build unit test target." ${TIRO_DEV})
 option(TIRO_EXAMPLES "Build example projects." ${TIRO_DEV})
 option(TIRO_DOCS "Enable documentation build target (use target doc to build)." OFF)
+option(TIRO_LTO "Enable link time optimization (if supported)." OFF)
 option(TIRO_RTTI "Enable or disable building with runtime type information." OFF)
+option(TIRO_SAN "Enable compiling with sanitizer flags (GCC only)." OFF)
+option(TIRO_COV "Code coverage analysis. Build mode should be Debug." OFF)
 
 # Note: incomplete support for static libraries because of of nested subprojects.
 # The fact that we use absl/fmt/utf8cpp etc. leaks and may lead to linking errors.
@@ -43,13 +42,16 @@ option(TIRO_SKIP_INSTALL "Build without installation targets" OFF)
 message(STATUS "TIRO_DEV=${TIRO_DEV}")
 message(STATUS "TIRO_TESTS=${TIRO_TESTS}")
 message(STATUS "TIRO_EXAMPLES=${TIRO_EXAMPLES}")
+message(STATUS "TIRO_DOCS=${TIRO_DOCS}")
+message(STATUS "TIRO_LTO=${TIRO_LTO}")
+message(STATUS "TIRO_RTTI=${TIRO_RTTI}")
+message(STATUS "TIRO_SAN=${TIRO_SAN}")
+message(STATUS "TIRO_COV=${TIRO_COV}")
+message(STATUS "TIRO_BUILD_SHARED=${TIRO_BUILD_SHARED}")
 message(STATUS "TIRO_WARNINGS=${TIRO_WARNINGS}")
 message(STATUS "TIRO_WERROR=${TIRO_WERROR}")
-message(STATUS "TIRO_SAN=${TIRO_SAN}")
-message(STATUS "TIRO_LTO=${TIRO_LTO}")
-message(STATUS "TIRO_COV=${TIRO_COV}")
-message(STATUS "TIRO_IWYU=${TIRO_IWYU}")
 message(STATUS "TIRO_SKIP_THREADS=${TIRO_SKIP_THREADS}")
+message(STATUS "TIRO_SKIP_INSTALL=${TIRO_SKIP_INSTALL}")
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_C_VISIBILITY_PRESET hidden)
@@ -66,10 +68,6 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
         STRING "Choose the type of build." FORCE)
     set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
         "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
-endif()
-
-if (TIRO_IWYU)
-    find_program(IWYU_PATH NAMES include-what-you-use iwyu REQUIRED)
 endif()
 
 if(TIRO_COV)
